Implemented the Object Scan difference